# kernell-sdk

./: Cargo.toml  README.md  bandit_report.json  fuzz_economic_engine.py  kernell_client.py  kernell_provider.py  pre-commit-security.sh  pyproject.toml  test_firewall_v2.py  test_value_flow.py  test_wal_gen.py
.kernell/: index.json
core/: db.py
deploy/: chaos_engine.py  client_smoke.py
kap_escrow/: __init__.py  engine.py  signing.py  wal.py
kernell_os_sdk/billing/: invoicing.py  observability.py  payments.py  pricing.py  radar.py  spend_guard.py  subscriptions.py
kernell_os_sdk/cli/: __main__.py
kernell_os_sdk/escrow/: manager.py
kernell_os_sdk/runtime/: __init__.py  execution_manager.py
kernell_os_sdk/security/: iam.py  middleware.py
kernell_os_sdk/web_dashboard/: server.py
kernell_sdk/: __init__.py  agent.py  agent_perception.py  agent_persistence.py  agent_reliability.py  agent_runtime.py  agent_validation.py  agent_world_model.py  browser.py  budget.py  chaos_engine.py  config.py  constants.py  crypto.py  dashboard.py  dashboard_metrics.py  economic_agent.py  economic_engine.py  execution_gate.py  execution_security.py  formal_verifier.py  gui.py  hardware.py  health.py  identity.py  interaction_router.py  launcher.py  log_redactor.py  marketplace_agent.py  memory.py  old_cli.py  orchestrator.py  os_controller.py  persister.py  policy_engine.py  resilience.py  risk_engine.py  sandbox.py  seccomp_agent.json  skill_loader.py  (+5 more)
kernell_sdk/adapters/: __init__.py  base.py  gui_adapter.py  interpreter_adapter.py  m2m_adapter.py  python_runtime.py  router.py  secure_adapter.py
kernell_sdk/benchmarks/: suite.py
kernell_sdk/billing/: metering.py  payments.py  subscriptions.py
kernell_sdk/cli/: __main__.py  cloud.py  dashboard.py  demo.py  doctor.py  init.py  run.py  upgrade.py
kernell_sdk/cluster/: __init__.py  bounty.py  compute_pool.py  discovery.py  pool.py  sync.py
kernell_sdk/cognitive/: __init__.py  agent_role.py  agentic_loop.py  cognitive_router.py  config_loader.py  execution_graph.py  intent_firewall.py  postgres_engine.py  reconciler.py  semantic_cache.py  semantic_memory_graph.py  task.py  tools.py  value_flow_engine.py
kernell_sdk/crypto/: passport.py
kernell_sdk/delegation/: __init__.py  manager.py  merger.py  task_queue.py
kernell_sdk/devlayer/: __init__.py  cli_dev.py  context_router.py  preview.py  task_client.py
kernell_sdk/escrow/: manager.py
kernell_sdk/governance/: cross_chain.py  dao.py  federation.py  financing.py
kernell_sdk/learning/: __init__.py  loop.py
kernell_sdk/llm/: __init__.py  anthropic.py  base.py  code_pipeline.py  ollama.py  openai.py  registry.py  router.py
kernell_sdk/marketplace/: __init__.py  auction.py  controller.py  discovery.py  dynamic_pricing.py  gpu_market.py  insurance.py  listings.py  matching.py  proxy_market.py  scheduler.py  simulator.py
kernell_sdk/network/: demo.py  event_log.py  gossip.py  node.py  peer_manager.py  state_sync.py  test_finality.py  test_sync.py  validator.py
kernell_sdk/observability/: event_bus.py  state.py
kernell_sdk/reputation/: dispute.py  engine.py  proof_of_execution.py  receipt.py
kernell_sdk/router/: __init__.py  api.py  classifier_pro.py  classifier_pro_server.py  dashboard_bridge.py  decomposer.py  entrypoint.py  estimator.py  failover_orchestrator.py  intelligent_router.py  lease_manager.py  mcts_engine.py  metrics.py  model_registry.py  offline_labeler.py  policy_lite.py  semantic_cache.py  simulation_engine.py  summarizer.py  telemetry_collector.py  types.py  verifier.py  wal_replicator.py
kernell_sdk/runtime/: base.py  docker_runtime.py  errors.py  execution_manager.py  firecracker_client.py  firecracker_runtime.py  hybrid_runtime.py  intelligent_router.py  models.py  sandbox.py  sandbox_server.py  sandbox_validator.py  scheduler.py  seccomp.json  subprocess_runtime.py  version_manager.py  worker_loader.py
kernell_sdk/security/: __init__.py  a2a_replay.py  a2a_replay_redis.py  baseline.py  capabilities.py  intent_firewall.py  interface.py  loader.py  policy.py  rate_limiter.py  signer.py  ssrf.py  verifier.py
kernell_sdk/shadow/: __init__.py  proxy.py
kernell_sdk/sully/: dataset_builder.py  engine.py  guardrail_pre_training.py  market.py  shadow_evaluator.py  types.py  (+2 more)
scripts/: benchmark_runner.py  check_security_gates.py  day0_boot.sh  install-shadow.sh  patch_sast.py  policy_build_dataset.py
tests/: test_business_abuse.py  test_capabilities.py  test_chaos_firecracker.py  test_data_flywheel.py  test_hardening.py  test_hybrid_fallback.py  test_iam_abuse.py  test_iam_middleware.py  test_invoicing.py  test_metering_chaos.py  test_observability.py  test_payments.py  test_policy_lite.py  test_pricing.py  test_router.py  test_runtime_abuse.py  test_scheduler.py  test_sdk.py  test_security.py  test_shadow_proxy.py  test_spend_guard.py
(+102 files in other folders)
