[package]
name = "kap_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "kap_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
